--- a/src/main/resources/templates/ide.html
+++ b/src/main/resources/templates/ide.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+  IDE
 </head>
 <body>
 <h1>Online IDE</h1>
@@ -13,6 +14,7 @@
     <option value="java">Java</option>
     <option value="python">Python</option>
     <option value="c">C</option>
+    <option value="cpp">C++</option>
 
   </select><br>
   <textarea name="code" rows="10" cols="50"></textarea><br>
