--- a/src/main/resources/templates/ide.html
+++ b/src/main/resources/templates/ide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  IDE
+  <title>IDE</title>
 </head>
 <body>
 <h1>Online IDE</h1>
