--- a/src/main/resources/templates/ide.html
+++ b/src/main/resources/templates/ide.html
@@ -12,7 +12,7 @@
   <select name="language" id="compileLanguage">
 
     <option value="java">Java</option>
-    <option value="python">Python</option>
+    <option value="py">Python</option>
     <option value="c">C</option>
     <option value="cpp">C++</option>
 
@@ -29,13 +29,15 @@
   <select name="language" id="submitLanguage">
 
     <option value="java">Java</option>
-    <option value="python">Python</option>
+    <option value="py">Python</option>
     <option value="c">C</option>
+    <option value="cpp">C++</option>
+
 
   </select><br>
   <textarea name="code" rows="10" cols="50"></textarea><br>
   <input type="submit" value="Submit">
 </form>
-
+<br>예금주 농협 이제희 351- 0562 - 8003 - 33</br>
 </body>
 </html>
