--- a/src/main/resources/templates/ide1.html
+++ b/src/main/resources/templates/ide1.html
@@ -15,6 +15,7 @@
     <option value="py">Python</option>
     <option value="c">C</option>
     <option value="cpp">C++</option>
+    <option value="js">JavaScript</option>
 
   </select><br>
   <textarea name="code" rows="10" cols="50"></textarea><br>
@@ -27,14 +28,19 @@
 <form action="/submit" method="post">
   <label for="submitLanguage">Select Language:</label>
   <select name="language" id="submitLanguage">
-
     <option value="java">Java</option>
     <option value="py">Python</option>
     <option value="c">C</option>
     <option value="cpp">C++</option>
+  </select><br>
 
+  <label for="problemType">Select Problem Type:</label>
+  <select name="problem" id="problemType">
+    <option value="Q1">Problem 1</option>
+    <option value="Q2">Problem 2</option>
 
   </select><br>
+
   <textarea name="code" rows="10" cols="50"></textarea><br>
   <input type="submit" value="Submit">
 </form>
