--- a/src/main/resources/templates/submissionResult.html
+++ b/src/main/resources/templates/submissionResult.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>Submission Result</title>
@@ -7,14 +7,14 @@
 <body>
 <h2>Submission Result</h2>
 
-<div th:if="${submissionResult.compilationResult.isCompile()}">
+<div th:if="${submissionResult.getSuccess()}">
   <p>Compilation Successful!</p>
-  <p th:text="'Compile Output: ' + ${submissionResult.compilationResult.output}"></p>
+  <p th:text="'Compile Output: ' + ${submissionResult.getSuccess()}"></p>
 </div>
-<div th:unless="${submissionResult.compilationResult.isCompile()}">
+<div th:unless="${submissionResult.getSuccess()}">
   <p>Compilation Failed</p>
-  <p th:text="'Compile Error: ' + ${submissionResult.compilationResult.output}"></p>
-  <p th:text="'Compile Output: ' + ${submissionResult.compilationResult.output}"></p>
+  <p th:text="'Compile Error: ' + ${submissionResult.getSuccess()}"></p>
+
 </div>
 
 <p th:text="'Score: ' + ${submissionResult.score}"></p>
